--- a/theme/templates/base_tailwind.html
+++ b/theme/templates/base_tailwind.html
@@ -1,4 +1,4 @@
-{% load static tailwind_tags %}
+<!-- {% load static tailwind_tags %}
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -16,4 +16,4 @@
 			</section>
 		</div>
 	</body>
-</html>
+</html> -->
