--- a/templates/projects/devis_list.html
+++ b/templates/projects/devis_list.html
@@ -281,7 +281,7 @@
           <h4 class="font-medium text-gray-900 mb-3">Actions rapides</h4>
           <div class="space-y-2">
             <a
-              href="{% url 'projects:list' %}"
+              href="{% url 'projects:projet_list' %}"
               class="w-full action-btn btn-secondary justify-center text-xs"
             >
               <i class="fas fa-paint-brush"></i>
@@ -689,7 +689,7 @@
           </a>
           {% else %}
           <a
-            href="{% url 'projects:create' %}"
+            href="{% url 'projects:projet_create_step1' %}"
             class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-3 rounded-lg font-medium"
           >
             Créer un projet
